--- a/java-knowledge-base/pom.xml
+++ b/java-knowledge-base/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>cglib</artifactId>
             <version>3.2.4</version>
         </dependency>
+        <dependency>
+            <groupId>javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.8.0.GA</version>
+        </dependency>
     </dependencies>
 
 
